platform/components/llm/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: llm
  labels:
    infra.fredrir.com/tier: platform
    infra.fredrir.com/managed: 'true'
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.36
